TypeScriptParser.py
# Generated from TypeScript.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class TypeScriptParser ( Parser ):

    grammarFileName = "TypeScript.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'{'", "'}'", "':'", "';'", "'('", "')'", 
                     "','", "'['", "']'", "'.'", "'let'", "'const'", "'function'", 
                     "'if'", "'else'", "'while'", "'for'", "'interface'", 
                     "'return'", "'number'", "'string'", "'boolean'", "'='", 
                     "'+'", "'-'", "'*'", "'/'", "'%'", "'=='", "'!='", 
                     "'<'", "'<='", "'>'", "'>='", "'&&'", "'||'", "'!'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "LET", "CONST", 
                      "FUNCTION", "IF", "ELSE", "WHILE", "FOR", "INTERFACE", 
                      "RETURN", "NUMBER_TYPE", "STRING_TYPE", "BOOLEAN_TYPE", 
                      "ASSIGN", "PLUS", "MINUS", "MULT", "DIV", "MOD", "EQ", 
                      "NEQ", "LT", "LTE", "GT", "GTE", "AND", "OR", "NOT", 
                      "NUMBER_LIT", "STRING", "BOOLEAN_LIT", "ID", "WS", 
                      "LINE_COMMENT", "BLOCK_COMMENT" ]

    RULE_program = 0
    RULE_statement = 1
    RULE_block = 2
    RULE_variableDecl = 3
    RULE_functionDecl = 4
    RULE_paramList = 5
    RULE_param = 6
    RULE_returnStmt = 7
    RULE_ifStmt = 8
    RULE_whileStmt = 9
    RULE_forStmt = 10
    RULE_expressionStmt = 11
    RULE_expression = 12
    RULE_assignmentExpr = 13
    RULE_logicalOrExpr = 14
    RULE_logicalAndExpr = 15
    RULE_equalityExpr = 16
    RULE_relationalExpr = 17
    RULE_additiveExpr = 18
    RULE_multiplicativeExpr = 19
    RULE_unaryExpr = 20
    RULE_postfixExpr = 21
    RULE_postfixOp = 22
    RULE_primary = 23
    RULE_arrayLiteral = 24
    RULE_objectLiteral = 25
    RULE_propAssign = 26
    RULE_typeExpr = 27
    RULE_baseType = 28
    RULE_interfaceDecl = 29
    RULE_interfaceProp = 30
    RULE_literal = 31

    ruleNames =  [ "program", "statement", "block", "variableDecl", "functionDecl", 
                   "paramList", "param", "returnStmt", "ifStmt", "whileStmt", 
                   "forStmt", "expressionStmt", "expression", "assignmentExpr", 
                   "logicalOrExpr", "logicalAndExpr", "equalityExpr", "relationalExpr", 
                   "additiveExpr", "multiplicativeExpr", "unaryExpr", "postfixExpr", 
                   "postfixOp", "primary", "arrayLiteral", "objectLiteral", 
                   "propAssign", "typeExpr", "baseType", "interfaceDecl", 
                   "interfaceProp", "literal" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    LET=11
    CONST=12
    FUNCTION=13
    IF=14
    ELSE=15
    WHILE=16
    FOR=17
    INTERFACE=18
    RETURN=19
    NUMBER_TYPE=20
    STRING_TYPE=21
    BOOLEAN_TYPE=22
    ASSIGN=23
    PLUS=24
    MINUS=25
    MULT=26
    DIV=27
    MOD=28
    EQ=29
    NEQ=30
    LT=31
    LTE=32
    GT=33
    GTE=34
    AND=35
    OR=36
    NOT=37
    NUMBER_LIT=38
    STRING=39
    BOOLEAN_LIT=40
    ID=41
    WS=42
    LINE_COMMENT=43
    BLOCK_COMMENT=44

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(TypeScriptParser.EOF, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TypeScriptParser.StatementContext)
            else:
                return self.getTypedRuleContext(TypeScriptParser.StatementContext,i)


        def getRuleIndex(self):
            return TypeScriptParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = TypeScriptParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 67
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 4260608571682) != 0):
                self.state = 64
                self.statement()
                self.state = 69
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 70
            self.match(TypeScriptParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variableDecl(self):
            return self.getTypedRuleContext(TypeScriptParser.VariableDeclContext,0)


        def functionDecl(self):
            return self.getTypedRuleContext(TypeScriptParser.FunctionDeclContext,0)


        def interfaceDecl(self):
            return self.getTypedRuleContext(TypeScriptParser.InterfaceDeclContext,0)


        def ifStmt(self):
            return self.getTypedRuleContext(TypeScriptParser.IfStmtContext,0)


        def whileStmt(self):
            return self.getTypedRuleContext(TypeScriptParser.WhileStmtContext,0)


        def forStmt(self):
            return self.getTypedRuleContext(TypeScriptParser.ForStmtContext,0)


        def expressionStmt(self):
            return self.getTypedRuleContext(TypeScriptParser.ExpressionStmtContext,0)


        def returnStmt(self):
            return self.getTypedRuleContext(TypeScriptParser.ReturnStmtContext,0)


        def block(self):
            return self.getTypedRuleContext(TypeScriptParser.BlockContext,0)


        def getRuleIndex(self):
            return TypeScriptParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = TypeScriptParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        try:
            self.state = 81
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 72
                self.variableDecl()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 73
                self.functionDecl()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 74
                self.interfaceDecl()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 75
                self.ifStmt()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 76
                self.whileStmt()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 77
                self.forStmt()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 78
                self.expressionStmt()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 79
                self.returnStmt()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 80
                self.block()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TypeScriptParser.StatementContext)
            else:
                return self.getTypedRuleContext(TypeScriptParser.StatementContext,i)


        def getRuleIndex(self):
            return TypeScriptParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlock" ):
                return visitor.visitBlock(self)
            else:
                return visitor.visitChildren(self)




    def block(self):

        localctx = TypeScriptParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 83
            self.match(TypeScriptParser.T__0)
            self.state = 87
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 4260608571682) != 0):
                self.state = 84
                self.statement()
                self.state = 89
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 90
            self.match(TypeScriptParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VariableDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(TypeScriptParser.ID, 0)

        def typeExpr(self):
            return self.getTypedRuleContext(TypeScriptParser.TypeExprContext,0)


        def LET(self):
            return self.getToken(TypeScriptParser.LET, 0)

        def CONST(self):
            return self.getToken(TypeScriptParser.CONST, 0)

        def ASSIGN(self):
            return self.getToken(TypeScriptParser.ASSIGN, 0)

        def expression(self):
            return self.getTypedRuleContext(TypeScriptParser.ExpressionContext,0)


        def getRuleIndex(self):
            return TypeScriptParser.RULE_variableDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVariableDecl" ):
                listener.enterVariableDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVariableDecl" ):
                listener.exitVariableDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVariableDecl" ):
                return visitor.visitVariableDecl(self)
            else:
                return visitor.visitChildren(self)




    def variableDecl(self):

        localctx = TypeScriptParser.VariableDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_variableDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 92
            _la = self._input.LA(1)
            if not(_la==11 or _la==12):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 93
            self.match(TypeScriptParser.ID)
            self.state = 94
            self.match(TypeScriptParser.T__2)
            self.state = 95
            self.typeExpr()
            self.state = 98
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==23:
                self.state = 96
                self.match(TypeScriptParser.ASSIGN)
                self.state = 97
                self.expression()


            self.state = 100
            self.match(TypeScriptParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNCTION(self):
            return self.getToken(TypeScriptParser.FUNCTION, 0)

        def ID(self):
            return self.getToken(TypeScriptParser.ID, 0)

        def typeExpr(self):
            return self.getTypedRuleContext(TypeScriptParser.TypeExprContext,0)


        def block(self):
            return self.getTypedRuleContext(TypeScriptParser.BlockContext,0)


        def paramList(self):
            return self.getTypedRuleContext(TypeScriptParser.ParamListContext,0)


        def getRuleIndex(self):
            return TypeScriptParser.RULE_functionDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunctionDecl" ):
                listener.enterFunctionDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunctionDecl" ):
                listener.exitFunctionDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunctionDecl" ):
                return visitor.visitFunctionDecl(self)
            else:
                return visitor.visitChildren(self)




    def functionDecl(self):

        localctx = TypeScriptParser.FunctionDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_functionDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 102
            self.match(TypeScriptParser.FUNCTION)
            self.state = 103
            self.match(TypeScriptParser.ID)
            self.state = 104
            self.match(TypeScriptParser.T__4)
            self.state = 106
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==41:
                self.state = 105
                self.paramList()


            self.state = 108
            self.match(TypeScriptParser.T__5)
            self.state = 109
            self.match(TypeScriptParser.T__2)
            self.state = 110
            self.typeExpr()
            self.state = 111
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def param(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TypeScriptParser.ParamContext)
            else:
                return self.getTypedRuleContext(TypeScriptParser.ParamContext,i)


        def getRuleIndex(self):
            return TypeScriptParser.RULE_paramList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParamList" ):
                listener.enterParamList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParamList" ):
                listener.exitParamList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParamList" ):
                return visitor.visitParamList(self)
            else:
                return visitor.visitChildren(self)




    def paramList(self):

        localctx = TypeScriptParser.ParamListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_paramList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 113
            self.param()
            self.state = 118
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==7:
                self.state = 114
                self.match(TypeScriptParser.T__6)
                self.state = 115
                self.param()
                self.state = 120
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(TypeScriptParser.ID, 0)

        def typeExpr(self):
            return self.getTypedRuleContext(TypeScriptParser.TypeExprContext,0)


        def getRuleIndex(self):
            return TypeScriptParser.RULE_param

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParam" ):
                listener.enterParam(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParam" ):
                listener.exitParam(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParam" ):
                return visitor.visitParam(self)
            else:
                return visitor.visitChildren(self)




    def param(self):

        localctx = TypeScriptParser.ParamContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_param)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 121
            self.match(TypeScriptParser.ID)
            self.state = 122
            self.match(TypeScriptParser.T__2)
            self.state = 123
            self.typeExpr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ReturnStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def RETURN(self):
            return self.getToken(TypeScriptParser.RETURN, 0)

        def expression(self):
            return self.getTypedRuleContext(TypeScriptParser.ExpressionContext,0)


        def getRuleIndex(self):
            return TypeScriptParser.RULE_returnStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReturnStmt" ):
                listener.enterReturnStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReturnStmt" ):
                listener.exitReturnStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReturnStmt" ):
                return visitor.visitReturnStmt(self)
            else:
                return visitor.visitChildren(self)




    def returnStmt(self):

        localctx = TypeScriptParser.ReturnStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_returnStmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 125
            self.match(TypeScriptParser.RETURN)
            self.state = 127
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 4260607557922) != 0):
                self.state = 126
                self.expression()


            self.state = 129
            self.match(TypeScriptParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(TypeScriptParser.IF, 0)

        def expression(self):
            return self.getTypedRuleContext(TypeScriptParser.ExpressionContext,0)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TypeScriptParser.StatementContext)
            else:
                return self.getTypedRuleContext(TypeScriptParser.StatementContext,i)


        def ELSE(self):
            return self.getToken(TypeScriptParser.ELSE, 0)

        def getRuleIndex(self):
            return TypeScriptParser.RULE_ifStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfStmt" ):
                listener.enterIfStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfStmt" ):
                listener.exitIfStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfStmt" ):
                return visitor.visitIfStmt(self)
            else:
                return visitor.visitChildren(self)




    def ifStmt(self):

        localctx = TypeScriptParser.IfStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_ifStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 131
            self.match(TypeScriptParser.IF)
            self.state = 132
            self.match(TypeScriptParser.T__4)
            self.state = 133
            self.expression()
            self.state = 134
            self.match(TypeScriptParser.T__5)
            self.state = 135
            self.statement()
            self.state = 138
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.state = 136
                self.match(TypeScriptParser.ELSE)
                self.state = 137
                self.statement()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WhileStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WHILE(self):
            return self.getToken(TypeScriptParser.WHILE, 0)

        def expression(self):
            return self.getTypedRuleContext(TypeScriptParser.ExpressionContext,0)


        def statement(self):
            return self.getTypedRuleContext(TypeScriptParser.StatementContext,0)


        def getRuleIndex(self):
            return TypeScriptParser.RULE_whileStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhileStmt" ):
                listener.enterWhileStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhileStmt" ):
                listener.exitWhileStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhileStmt" ):
                return visitor.visitWhileStmt(self)
            else:
                return visitor.visitChildren(self)




    def whileStmt(self):

        localctx = TypeScriptParser.WhileStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_whileStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 140
            self.match(TypeScriptParser.WHILE)
            self.state = 141
            self.match(TypeScriptParser.T__4)
            self.state = 142
            self.expression()
            self.state = 143
            self.match(TypeScriptParser.T__5)
            self.state = 144
            self.statement()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ForStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FOR(self):
            return self.getToken(TypeScriptParser.FOR, 0)

        def statement(self):
            return self.getTypedRuleContext(TypeScriptParser.StatementContext,0)


        def variableDecl(self):
            return self.getTypedRuleContext(TypeScriptParser.VariableDeclContext,0)


        def expressionStmt(self):
            return self.getTypedRuleContext(TypeScriptParser.ExpressionStmtContext,0)


        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TypeScriptParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(TypeScriptParser.ExpressionContext,i)


        def getRuleIndex(self):
            return TypeScriptParser.RULE_forStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterForStmt" ):
                listener.enterForStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitForStmt" ):
                listener.exitForStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitForStmt" ):
                return visitor.visitForStmt(self)
            else:
                return visitor.visitChildren(self)




    def forStmt(self):

        localctx = TypeScriptParser.ForStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_forStmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 146
            self.match(TypeScriptParser.FOR)
            self.state = 147
            self.match(TypeScriptParser.T__4)
            self.state = 151
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [11, 12]:
                self.state = 148
                self.variableDecl()
                pass
            elif token in [1, 5, 8, 37, 38, 39, 40, 41]:
                self.state = 149
                self.expressionStmt()
                pass
            elif token in [4]:
                self.state = 150
                self.match(TypeScriptParser.T__3)
                pass
            else:
                raise NoViableAltException(self)

            self.state = 154
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 4260607557922) != 0):
                self.state = 153
                self.expression()


            self.state = 156
            self.match(TypeScriptParser.T__3)
            self.state = 158
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 4260607557922) != 0):
                self.state = 157
                self.expression()


            self.state = 160
            self.match(TypeScriptParser.T__5)
            self.state = 161
            self.statement()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(TypeScriptParser.ExpressionContext,0)


        def getRuleIndex(self):
            return TypeScriptParser.RULE_expressionStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpressionStmt" ):
                listener.enterExpressionStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpressionStmt" ):
                listener.exitExpressionStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpressionStmt" ):
                return visitor.visitExpressionStmt(self)
            else:
                return visitor.visitChildren(self)




    def expressionStmt(self):

        localctx = TypeScriptParser.ExpressionStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_expressionStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 163
            self.expression()
            self.state = 164
            self.match(TypeScriptParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assignmentExpr(self):
            return self.getTypedRuleContext(TypeScriptParser.AssignmentExprContext,0)


        def getRuleIndex(self):
            return TypeScriptParser.RULE_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpression" ):
                listener.enterExpression(self)
